Fix tags vertical alignement

--- a/packages/scss/src/components/tag/component.scss
+++ b/packages/scss/src/components/tag/component.scss
@@ -13,7 +13,7 @@
 	display: inline-flex;
 	align-items: center;
 	text-align: center;
-	vertical-align: baseline;
+	vertical-align: top;
 	white-space: nowrap;
 	border: 0;
 	font: var(--components-tag-font);
